bug 881643 unhandled sync OnInputStreamReady on AsyncWait stack r=hurley